Fixed inpage navigation contrast issue, resolves #103

--- a/templates/components/inpage-navigation/_jumpnav.scss
+++ b/templates/components/inpage-navigation/_jumpnav.scss
@@ -6,7 +6,7 @@
   width: 94%;
 
   li {
-    color: $gray;
+    color: $midgray;
     display: inline-block;
     font-size: 14px;
     font-weight: $regular;
